compiler/testData/diagnostics/tests/inline/kt4869.kt
inline fun foo(f: () -> Unit) {
    val ff = { f: () -> Unit ->

    }
    ff(<!USAGE_IS_NOT_INLINABLE!>f<!>)
}